03-canary-header/ingress-stable.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stable
  labels:
    app: demo
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  #ingressClassName: nginx
  rules:
    - host: demo.local
      http:
        paths:
        - path: "/"
          pathType: ImplementationSpecific
          backend:
            service:
              name: demo-v1 
              port:
                name: http
